# GitHire

./: .dockerignore  .env.docker  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_QUICK_START.md  Dockerfile  Dockerfile.simple  GITHUB_PUBLISH_GUIDE.md  README.md  demo_pipeline.py  deploy.sh  docker-compose.yml  githire.db  pyproject.toml  rename_screenshots.py  verify_structure.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: tests.yml
.specify/agents/: CLAUDE.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  QUICKSTART.md  TESTING.md
examples/: api_usage_example.py
frontend/: .dockerignore  .env.example  Dockerfile  README.md  package-lock.json  package.json  railway.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/api/: auth.ts  client.ts  pipeline.ts  projects.ts
frontend/src/components/: AuthHero.tsx  Button.tsx  CandidateCard.test.tsx  CandidateCard.tsx  ChangePasswordModal.tsx  ConfirmationModal.test.tsx  ConfirmationModal.tsx  CreateProjectModal.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  FollowUpPanel.tsx  FormError.tsx  Input.tsx  JobDescriptionInput.test.tsx  JobDescriptionInput.tsx  Loading.test.tsx  Loading.tsx  Navigation.tsx  OutreachPanel.tsx  PipelineProgress.test.tsx  PipelineProgress.tsx  ProjectListItem.test.tsx  ProjectListItem.tsx  ProtectedRoute.test.tsx  ProtectedRoute.tsx  ResultsList.test.tsx  ResultsList.tsx  Toast.test.tsx  Toast.tsx
frontend/src/contexts/: AuthContext.tsx  ToastContext.tsx
frontend/src/hooks/: usePipelineProgress.ts
frontend/src/pages/: DashboardPage.tsx  ForgotPasswordPage.tsx  (+14 more)
screenshots/: README.md
specs/000-githire-system-architecture/: spec.md
specs/001-jd-parser-module/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-github-sourcer-module/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-ranking-engine-module/: plan.md  spec.md  tasks.md
specs/004-outreach-generator-module/: plan.md  spec.md  tasks.md
specs/005-backend-api-module/: plan.md  spec.md  tasks.md
specs/006-frontend-app-module/: spec.md  tasks.md
specs/007-ui-ux-enhancement/: plan.md  spec.md  tasks.md
specs/008-multi-stage-workflow/: plan.md  spec.md  tasks.md
specs/009-enhanced-github-sourcing/: spec.md
specs/010-contact-enrichment-module/: plan.md  spec.md  tasks.md
specs/011-gharchive-bigquery-integration/: plan.md  spec.md  tasks.md
src/: __init__.py
src/backend_api/: __init__.py  auth.py  database.py  exceptions.py  main.py  models.py  pipeline.py  schemas.py
src/bigquery_sourcer/: __init__.py
src/config/: detection_config.yaml  skill_mappings.json  skill_weights.yaml  state_cities_mapping.yaml
src/contact_enrichment/: __init__.py  contact_enricher.py
src/data/: cities.json  location_aliases.json  skill_aliases.json
src/github_sourcer/: __init__.py  cli.py  config.py  logging_config.py
src/jd_parser/: __init__.py  cli.py  llm_client.py  models.py  parser.py  skill_normalizer.py  validators.py
src/outreach_generator/: __init__.py  channel_optimizer.py  cliche_detector.py  content_validator.py  follow_up_generator.py  generator.py  models.py  orchestrator.py  personalization.py  personalization_scorer.py
src/ranking_engine/: __init__.py  models.py  ranker.py  skill_matcher.py
tests/bigquery_sourcer/: __init__.py
tests/contract/: test_candidate_validation.py  test_input_contract.py  test_input_schema_module002.py  test_output_contract.py  test_output_schema_module002.py
tests/integration/: test_ambiguous_input.py  test_cache_behavior.py  test_edge_cases.py  test_formal_jd.py  test_full_jd_parsing.py  test_github_search.py  test_iterative_refinement.py  test_minimal_input.py  test_profile_fetch.py  test_rate_limiting.py  test_search_service.py  test_validation_errors.py
tests/outreach_generator/: test_api.py
(+168 files in other folders)
